--- a/public_html/autor.html
+++ b/public_html/autor.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <meta name="Autor" content="Rafael Crisóstomo">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="..\imagens\logo-icone.ico" type="image/x-icon">
         <title>Quem somos - Pastelaria Parapuã</title>
     </head>
