adicionei rodaé e braeckpoint

--- a/public_html/cadastro.html
+++ b/public_html/cadastro.html
@@ -50,9 +50,8 @@
     </form>
     
     <div class="rodape">
-        <p>&copy; 2022 | Autor: João da Silva | E-mail: joao.silva@email.com | Página: 1 de 2</p>
-       </div>
-
+        <p>&copy; 2023 | Autor: Rafael Crisostomo | E-mail: crisostomo.rafael04@alunoifce.edu.br</p>
+    </div>
     </body>
 
 
