--- a/public_html/cardapio.html
+++ b/public_html/cardapio.html
@@ -21,3 +21,9 @@
             </ul>
         </div>
         <hr color="red">  
+        
+
+
+        <div class="rodape">
+            <p>&copy; 2023 | Autor: Rafael Crisostomo | E-mail: crisostomo.rafael04@alunoifce.edu.br</p>
+        </div>
