--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,6 +9,9 @@
     </head>
 
     <body>
+<!-- Cabeçalho  -->
+
+
         <div class="logo"> 
             <img src="assets/logo/logo-home.png" alt="imagens da logo pastelaria">
         </div>
