--- a/public_html/cardapio.html
+++ b/public_html/cardapio.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <meta charset="UTF-8">
+        <!-- Destinado a caracter4es especiais -->
+        <meta charset="UTF-8"> 
+        <!-- Adapatação da tela em varios formatos -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Icone de favoritos - favicon-->
         <link rel="shortcut icon" href="..\imagens\logo-icone.ico" type="image/x-icon">
+        <!-- Titulo da página -->
         <title>Cardápio - Pastelaria Parapuã</title>
     </head>
 
     <body>
+        <!-- Cabeçalho com MENU -->
+        <header>
+
+        </header>
+        <!--  -->
         <div class="logo"> 
             <img src="assets/logo/cardapio.png" alt="imagens da logo pastelaria">
         </div>
@@ -27,3 +36,9 @@
         <div class="rodape">
             <p>&copy; 2023 | Autor: Rafael Crisostomo | E-mail: crisostomo.rafael04@alunoifce.edu.br</p>
         </div>
+
+    </body>
+
+    <script>
+
+    </script>
