atualização semanticas e fontes

--- a/public_html/cadastro.html
+++ b/public_html/cadastro.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="..\imagens\logo-icone.ico" type="image/x-icon">
+        <link rel="stylesheet" href="style.css">
         <title>Cadastro - Pastelaria Parapuã</title>
     </head>
 
@@ -11,16 +12,19 @@
         <div class="logo"> 
             <img src="assets/logo/cadastro.png" alt="imagens da logo pastelaria">
         </div>
-
-        <div class="menu">
-            <ul>
-                <li><a href="index.html">Home</a></li> 
-                <li><a href="cardapio.html">Cardápio</a></li>
-                <li><a href="cadastro.html">Cadastro</a></li>
-                <li><a href="autor.html">Sobre o Autor</a></li>
-            </ul>
-        </div>
+            <nav>
+                <div class="menu">
+                    <ul>
+                        <li><a href="index.html">Home</a></li> 
+                        <li><a href="cardapio.html">Cardápio</a></li>
+                        <li><a href="cadastro.html">Cadastro</a></li>
+                        <li><a href="autor.html">Sobre o Autor</a></li>
+                    </ul>
+                </div>
+            </nav>
+        
         <hr color="red">  
+
 
         <h2>Cadastro de Clientes</h2>
 
