--- a/public_html/cardapio.html
+++ b/public_html/cardapio.html
@@ -7,36 +7,39 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Icone de favoritos - favicon-->
         <link rel="shortcut icon" href="..\imagens\logo-icone.ico" type="image/x-icon">
+        <link rel="stylesheet" href="style.css">
         <!-- Titulo da página -->
         <title>Cardápio - Pastelaria Parapuã</title>
     </head>
+<!-- Cabeçalho com MENU -->
+<header id="inicio">
 
-    <body>
-        <!-- Cabeçalho com MENU -->
-        <header>
+    <div class="logo" id="ilogo"> 
+        <img src="assets/logo/cardapio.png" alt="imagens da logo pastelaria">
+    </div>
 
-        </header>
-        <!--  -->
-        <div class="logo"> 
-            <img src="assets/logo/cardapio.png" alt="imagens da logo pastelaria">
-        </div>
+        <nav>
+            <div class="menu" id="imenu">
+                <ul>
+                    <li><a href="index.html">Home</a></li> 
+                    <li><a href="cardapio.html">Cardápio</a></li>
+                    <li><a href="cadastro.html">Cadastro</a></li>
+                    <li><a href="autor.html">Sobre o Autor</a></li>
+                </ul>
+            </div>
+        </nav>
 
-        <div class="menu">
-            <ul>
-                <li><a href="index.html">Home</a></li> 
-                <li><a href="cardapio.html">Cardápio</a></li>
-                <li><a href="cadastro.html">Cadastro</a></li>
-                <li><a href="autor.html">Sobre o Autor</a></li>
-            </ul>
-        </div>
+    </header>
+
         <hr color="red">  
         
 
-
-        <div class="rodape">
-            <p>&copy; 2023 | Autor: Rafael Crisostomo | E-mail: crisostomo.rafael04@alunoifce.edu.br</p>
-        </div>
-
+        <footer>
+            <div class="rodape">
+                <p>&copy; 2023 | Autor: Rafael Crisostomo | E-mail: crisostomo.rafael04@alunoifce.edu.br</p>
+            </div>
+        </footer>
+        
     </body>
 
     <script>
