--- a/public_html/autor.html
+++ b/public_html/autor.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="..\imagens\logo-icone.ico" type="image/x-icon">
+        <link rel="stylesheet" href="style.css">
         <title>Quem somos - Pastelaria Parapuã</title>
     </head>
 
