fonte menu, imagens no inicio

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,12 +12,14 @@
         <!-- Cabeçalho com MENU -->
         <header id="inicio">
 
-        <div class="logo" id="ilogo"> 
+        <div class="logo" id="logo">
+
             <img src="assets/logo/logo-home.png" alt="imagens da logo pastelaria">
+            
         </div>
 
             <nav>
-                <div class="menu" id="imenu">
+                <div class="menu" id="menu">
                     <ul>
                         <li><a href="index.html">Home</a></li> 
                         <li><a href="cardapio.html">Cardápio</a></li>
@@ -36,12 +38,15 @@
         <main>
             <div class="corpo">
                 <h4>Pastelaria Parapuã</h4>
+                <img src="assets/img/home_pastel.jpg" alt="bolinha de carne">
                     <p>Pasteis caseiros, feitos com ingredientes frescos e de qualidade. Aqui você encontra os sabores mais tradicionais e também opções inovadoras. Venha experimentar nossas delícias!</p>
 
                 <h4>Temos coxinhas fritas na hora!</h4>
+                <img src="assets/img/home_coxinha.jpg" alt="">
                     <p>Coxinhas caseiras, feitas com frango desfiado, temperos frescos e catupiry. Crocantes por fora e cremosas por dentro, nossas coxinhas são o melhor lanche da cidade.</p>
 
                 <h4>Bolinhas de queijo de dar água na boca</h4>
+                <img src="assets/img/home_bolinha.jpg" alt="">
                     <p>Bolinhas de queijo caseiras, feitas com queijo mussarela, ovos, farinha de trigo e temperos frescos. Crocantes por fora, macias por dentro e cheias de sabor, nossas bolinhas de queijo são perfeitas para um lanche rápido e delicioso.</p>
             </div>            
         </main>
