--- a/public_html/autor.html
+++ b/public_html/autor.html
@@ -10,17 +10,19 @@
 
     <body>
         <div class="logo"> 
-            <img src="assets/logo/autor.png" alt="imagens da logo pastelaria">
+            <img src="assets/logo/cadastro.png" alt="imagens da logo pastelaria">
         </div>
-
-        <div class="menu">
-            <ul>
-                <li><a href="index.html">Home</a></li> 
-                <li><a href="cardapio.html">Cardápio</a></li>
-                <li><a href="cadastro.html">Cadastro</a></li>
-                <li><a href="autor.html">Sobre o Autor</a></li>
-            </ul>
-        </div>
+            <nav>
+                <div class="menu">
+                    <ul>
+                        <li><a href="index.html">Home</a></li> 
+                        <li><a href="cardapio.html">Cardápio</a></li>
+                        <li><a href="cadastro.html">Cadastro</a></li>
+                        <li><a href="autor.html">Sobre o Autor</a></li>
+                    </ul>
+                </div>
+            </nav>
+        
         <hr color="red">  
 
 
