criação da pagina cadastro

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,18 +26,32 @@
     <hr color="red">  
         </header>  
         <main>
-            <div class="corpo">
-                <img src="assets/img/home_pastel.jpg" alt="bolinha de carne" class="img">
-                <span class="texto"><h4>Pastelaria Parapuã</h4>
-                    <p>Pasteis caseiros, feitos com ingredientes frescos e de qualidade. Aqui você encontra os sabores mais tradicionais e também opções inovadoras. Venha experimentar nossas delícias!</p></span>
-                <img src="assets/img/home_coxinha.jpg" alt="" class="img">
-                <h4>Temos coxinhas fritas na hora!</h4>
+            <section>
+                <div class="img-home"><img src="assets/img/home_pastel.jpg" alt="imagens de um pastel">
+                </div>
+                    <div class="texto-home">
+                        <h1 class="nome">Pasteis feitos na hora!</h1>
+                        <p>Pasteis caseiros, feitos com ingredientes frescos e de qualidade. Aqui você encontra os sabores mais tradicionais e também opções inovadoras. Venha experimentar nossas delícias!</p>
+                    </div>                
+            </section>
+
+            <section>
+                <div class="texto-home">
+                    <h1 class="nome">Temos coxinhas fritas</h1>
                     <p>Coxinhas caseiras, feitas com frango desfiado, temperos frescos e catupiry. Crocantes por fora e cremosas por dentro, nossas coxinhas são o melhor lanche da cidade.</p>
-                <img src="assets/img/home_bolinha.jpg" alt="" class="img">    
-                <h4>Bolinhas de queijo de dar água na boca</h4>                
-                    <p>Bolinhas de queijo caseiras, feitas com queijo mussarela, ovos, farinha de trigo e temperos frescos. Crocantes por fora, macias por dentro e cheias de sabor, nossas bolinhas de queijo são perfeitas para um lanche rápido e delicioso.</p><br>
-                
-            </div>            
+                </div>
+                <div class="img-home"><img src="assets/img/home_coxinha.jpg" alt="imagens de uma coxinha">
+                </div>
+            </section>
+
+            <section>
+                <div class="img-home"><img src="assets/img/home_bolinha.jpg" alt="imagens de uma bolinha de carne">
+                </div>
+                    <div class="texto-home">
+                        <h1 class="nome">Bolinhas de queijo de dar água na boca</h1>
+                        <p>Bolinhas de queijo caseiras, feitas com queijo mussarela, ovos, farinha de trigo e temperos frescos. Crocantes por fora, macias por dentro e cheias de sabor, nossas bolinhas de queijo são perfeitas para um lanche rápido e delicioso.</p>
+                    </div>
+            </section>
         </main>
 
         <footer>
