--- a/public_html/cadastro.html
+++ b/public_html/cadastro.html
@@ -3,59 +3,99 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="..\imagens\logo-icone.ico" type="image/x-icon">
-        <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" href="assets/logo-icone.ico" type="image/x-icon">
+        <link rel="stylesheet" href="style-cadastro.css">
         <title>Cadastro - Pastelaria Parapuã</title>
     </head>
 
     <body>
-        <div class="logo"> 
-            <img src="assets/logo/cadastro.png" alt="imagens da logo pastelaria">
-        </div>
-            <nav>
-                <div class="menu">
-                    <ul>
-                        <li><a href="index.html">Home</a></li> 
-                        <li><a href="cardapio.html">Cardápio</a></li>
-                        <li><a href="cadastro.html">Cadastro</a></li>
-                        <li><a href="autor.html">Sobre o Autor</a></li>
-                    </ul>
+        <header>
+            <header id="inicio">
+                <div class="logo" id="logo">
+                    <img src="assets/logo/logo-home.png" alt="imagens da logo pastelaria">
                 </div>
-            </nav>
-        
-        <hr color="red">  
+                    <nav>
+                        <div class="menu" id="menu">
+                            <ul>
+                                <li><a href="index.html">Home</a></li> 
+                                <li><a href="cardapio.html">Cardápio</a></li>
+                                <li><a href="cadastro.html">Cadastro</a></li>
+                                <li><a href="autor.html">Sobre o Autor</a></li>
+                            </ul>
+                        </div>
+                    </nav>
+            <hr color="red">  
+                </header>  
+        </header>  
+        <main>
+            <div class="container">
+            <section_1>
+                <div class="login-header">
+                    <div class="title">
+                        <h1>Login</h1>
+                    </div>
+                    <div class="input-group">
+                        <div class="input-box">
+                            <label for="login-button">login</label>
+                            <input id="login-button" type="text" name="input-login" placeholder="Digite seu login" required>
+                        </div>
 
+                        <div class="input-group">
+                            <div class="input-box">
+                                <label for="password">Senha</label>
+                                    <input id="password" type="password" name="password" placeholder="Digite sua senha" required>
+                            </div>
+                    <div class="login-button">
+                        <button><a href="#">Entrar</a></button></div>
+                        </div>
+                    </div>
+                </div>
 
-        <h2>Cadastro de Clientes</h2>
+            </section_1>
 
-    <form action="/submit_cadastro" method="post">
-    <label for="fname">Nome:</label><br>
-    <input type="text" id="fname" name="fname" required><br>
+            <section>
+                    <div class="form">
+                        <form action="#">
+                            <div class="form-header">
+                                <div class="title">
+                                    <h1>Cadastre-se</h1>
+                                </div>
+                            </div>
+                            <div class="input-group">
+                                <div class="input-box">
+                                    <label for="firstname">Primeiro Nome</label>
+                                    <input id="firstname" type="text" name="firstname" placeholder="Digite seu primeiro nome" required>
+                                </div>
+                                <div class="input-box">
+                                    <label for="lastname">Sobrenome</label>
+                                    <input id="lastname" type="text" name="lastname" placeholder="Digite seu sobrenome" required>
+                                </div>
+                                <div class="input-box">
+                                    <label for="email">E-mail</label>
+                                    <input id="email" type="email" name="email" placeholder="Digite seu e-mail" required>
+                                </div>
+                                <div class="input-box">
+                                    <label for="number">Celular</label>
+                                    <input id="number" type="tel" name="number" placeholder="(xx) xxxx-xxxx" required>
+                                </div>
+                                <div class="input-box">
+                                    <label for="password">Senha</label>
+                                    <input id="password" type="password" name="password" placeholder="Digite sua senha" required>
+                                </div>
+                                <div class="input-box">
+                                    <label for="confirmPassword">Confirme sua Senha</label>
+                                    <input id="confirmPassword" type="password" name="confirmPassword" placeholder="Digite sua senha novamente" required>
+                                </div>            
+                            </div>
+                            <div class="continue-button">
+                                <button><a href="#">Cadastrar</a> </button>
+                            </div>
+                        </form>
+                    </div>
+            </section>
+            </div>
 
-    <label for="lname">Sobrenome:</label><br>
-    <input type="text" id="lname" name="lname" required><br>
-
-    <label for="email">E-mail:</label><br>
-    <input type="email" id="email" name="email" required><br>
-
-    <label for="tel">Telefone:</label><br>
-    <input type="tel" id="tel" name="tel" required><br>
-
-    <label for="end">Endereço:</label><br>
-    <input type="end" id="end" name="end" required><br>
-
-    <label for="senha">Senha:</label><br>
-    <input type="password" id="senha" name="senha" required><br>
-
-    <label for="c_senha">Confirmar Senha:</label><br>
-    <input type="password" id="c_senha" name="c_senha" required><br>
-    <br>
-    <input type="submit" value="Cadastrar">
-    </form>
-    
-    <div class="rodape">
-        <p>&copy; 2023 | Autor: Rafael Crisostomo | E-mail: crisostomo.rafael04@alunoifce.edu.br</p>
-    </div>
+        </main>
     </body>
 
 
