Ciração de cadastro; login

--- a/public_html/cadastro.html
+++ b/public_html/cadastro.html
@@ -29,7 +29,7 @@
         </header>  
         <main>
             <div class="container">
-            <section_1>
+            <section>
                 <div class="login-header">
                     <div class="title">
                         <h1>Login</h1>
@@ -51,7 +51,7 @@
                     </div>
                 </div>
 
-            </section_1>
+            </section>
 
             <section>
                     <div class="form">
