ficha de cadastro completo

--- a/public_html/cadastro.html
+++ b/public_html/cadastro.html
@@ -12,7 +12,7 @@
         <header>
             <header id="inicio">
                 <div class="logo" id="logo">
-                    <img src="assets/logo/logo-home.png" alt="imagens da logo pastelaria">
+                    <img src="assets/logo/cadastro.png" alt="imagens da logo pastelaria">
                 </div>
                     <nav>
                         <div class="menu" id="menu">
@@ -30,25 +30,32 @@
         <main>
             <div class="container">
             <section>
-                <div class="login-header">
-                    <div class="title">
+                <div class="form-login">
+                    <div class="logo-login">
+                        <img src="assets/logo/logo-home.png" alt="">
+                    </div>
+                    
+                    <form action="#">
+                    <div class="title-login">
                         <h1>Login</h1>
                     </div>
-                    <div class="input-group">
+                    <div class="input-login">
                         <div class="input-box">
-                            <label for="login-button">login</label>
-                            <input id="login-button" type="text" name="input-login" placeholder="Digite seu login" required>
+                            <label for="login">login</label>
+                            <input id="input-login" type="text" name="input-login" placeholder="Digite seu login" required>
                         </div>
-
-                        <div class="input-group">
+                        <div class="input-">
                             <div class="input-box">
                                 <label for="password">Senha</label>
                                     <input id="password" type="password" name="password" placeholder="Digite sua senha" required>
                             </div>
-                    <div class="login-button">
-                        <button><a href="#">Entrar</a></button></div>
                         </div>
                     </div>
+                    <div class="entrar-button">
+                        <button><a href="#">Entrar</a></button>
+                    </div>
+                    </form>
+
                 </div>
 
             </section>
