--- a/public_html/cadastro.html
+++ b/public_html/cadastro.html
@@ -70,12 +70,12 @@
                             </div>
                             <div class="input-group">
                                 <div class="input-box">
-                                    <label for="firstname">Primeiro Nome</label>
-                                    <input id="firstname" type="text" name="firstname" placeholder="Digite seu primeiro nome" required>
+                                    <label for="firstname">Nome completo</label>
+                                    <input id="firstname" type="text" name="firstname" placeholder="Digite seu nome completo" required>
                                 </div>
                                 <div class="input-box">
-                                    <label for="lastname">Sobrenome</label>
-                                    <input id="lastname" type="text" name="lastname" placeholder="Digite seu sobrenome" required>
+                                    <label for="lastname">Endereço</label>
+                                    <input id="lastname" type="text" name="lastname" placeholder="Digite seu endereço" required>
                                 </div>
                                 <div class="input-box">
                                     <label for="email">E-mail</label>
@@ -101,8 +101,9 @@
                     </div>
             </section>
             </div>
-
         </main>
+
+        
     </body>
 
 
