inicialização de JS

--- a/public_html/autor.html
+++ b/public_html/autor.html
@@ -10,7 +10,7 @@
 
     <body>
         <div class="logo"> 
-            <img src="assets/logo/cadastro.png" alt="imagens da logo pastelaria">
+            <img src="assets/logo/autor.png" alt="imagens da logo pastelaria">
         </div>
             <nav>
                 <div class="menu">
@@ -26,7 +26,9 @@
         <hr color="red">  
 
 
-
-        <div class="rodape">
-            <p>&copy; 2023 | Autor: Rafael Crisostomo | E-mail: crisostomo.rafael04@alunoifce.edu.br</p>
-        </div>
+        <footer>
+            <div class="footer">
+                <p>&copy; 2023 | Autor: Rafael Crisostomo | E-mail: crisostomo.rafael04@aluno.ifce.edu.br</p>
+            </div>
+        </footer>
+    
