--- a/public_html/cadastro.html
+++ b/public_html/cadastro.html
@@ -103,7 +103,12 @@
             </div>
         </main>
 
-        
+        <footer>
+            <div class="footer">
+                <p>&copy; 2023 | Autor: Rafael Crisostomo | E-mail: crisostomo.rafael04@aluno.ifce.edu.br</p>
+            </div>
+        </footer>
+    
     </body>
 
 
