--- a/public_html/index.html
+++ b/public_html/index.html
@@ -25,6 +25,7 @@
             </nav>
     <hr color="red">  
         </header>  
+
         <main>
             <section>
                 <div class="img-home"><img src="assets/img/home_pastel.jpg" alt="imagens de um pastel">
@@ -53,8 +54,12 @@
                     </div>
             </section>
         </main>
-
-
     </body>
+
+    <footer>
+        <div class="footer">
+            <p>&copy; 2023 | Autor: Rafael Crisostomo | E-mail: crisostomo.rafael04@aluno.ifce.edu.br</p>
+        </div>
+    </footer>
 
 </html>
